@@ -86,7 +86,6 @@ import greencity.dto.order.OrderDto;
 import greencity.dto.order.OrderFondyClientDto;
 import greencity.dto.order.OrderPaymentDetailDto;
 import greencity.dto.order.OrderResponseDto;
-import greencity.dto.order.OrderStatusPageDto;
 import greencity.dto.order.OrderWithAddressesResponseDto;
 import greencity.dto.order.OrdersDataForUserDto;
 import greencity.dto.order.ReadAddressByOrderDto;
@@ -103,16 +102,14 @@ import greencity.dto.payment.PaymentResponseDto;
 import greencity.dto.payment.PaymentResponseDtoLiqPay;
 import greencity.dto.payment.PaymentTableInfoDto;
 import greencity.dto.position.PositionDto;
-import greencity.dto.service.AddServiceDto;
-import greencity.dto.service.CreateServiceDto;
 import greencity.dto.service.ServiceDto;
-import greencity.dto.tariff.EditTariffServiceDto;
+import greencity.dto.service.GetServiceDto;
+import greencity.dto.service.TariffServiceDto;
+import greencity.dto.service.GetTariffServiceDto;
 import greencity.dto.tariff.GetTariffInfoForEmployeeDto;
-import greencity.dto.tariff.GetTariffServiceDto;
 import greencity.dto.tariff.GetTariffsInfoDto;
 import greencity.dto.tariff.SetTariffLimitsDto;
 import greencity.dto.tariff.TariffsInfoDto;
-import greencity.dto.tariff.TariffTranslationDto;
 import greencity.dto.user.AddBonusesToUserDto;
 import greencity.dto.user.PersonalDataDto;
 import greencity.dto.user.UserInfoDto;
@@ -887,7 +884,8 @@ public class ModelUtils {
         return CertificateDtoForAdding.builder()
             .code("1111-1234")
             .monthCount(0)
-            .points(10)
+            .initialPointsValue(10)
+            .points(0)
             .build();
     }
 
@@ -2169,34 +2167,26 @@ public class ModelUtils {
             .build();
     }
 
-    public static TariffTranslationDto getTariffTranslationDto() {
-        return TariffTranslationDto.builder()
+    public static TariffServiceDto TariffServiceDto() {
+        return TariffServiceDto.builder()
+            .capacity(20)
+            .price(100)
+            .commission(50)
             .description("Description")
             .descriptionEng("DescriptionEng")
-            .nameEng("nameEng")
             .name("name")
+            .nameEng("nameEng")
             .build();
     }
 
-    public static AddServiceDto addServiceDto() {
-        return AddServiceDto.builder()
-            .commission(50)
-            .capacity(100)
-            .price(100)
-            .tariffTranslationDto(getTariffTranslationDto())
-            .locationId(1L)
-            .build();
-    }
-
-    public static GetTariffServiceDto getTariffServiceDto() {
+    public static GetTariffServiceDto getGetTariffServiceDto() {
         return GetTariffServiceDto.builder()
             .id(1)
             .capacity(20)
             .price(100)
             .commission(50)
             .fullPrice(150)
-            .capacity(100)
-            .minAmountOfBags(MinAmountOfBag.INCLUDE.name())
+            .limitIncluded(false)
             .description("Description")
             .descriptionEng("DescriptionEng")
             .name("name")
@@ -2241,17 +2231,17 @@ public class ModelUtils {
             .description("Description")
             .descriptionEng("DescriptionEng")
             .minAmountOfBags(MinAmountOfBag.INCLUDE)
+            .limitIncluded(false)
             .build());
     }
 
-    public static EditTariffServiceDto getEditTariffServiceDto() {
-        return EditTariffServiceDto.builder()
+    public static TariffServiceDto getTariffServiceDto() {
+        return TariffServiceDto.builder()
             .name("Бавовняна сумка")
             .capacity(120)
             .price(120)
             .commission(50)
             .description("Description")
-            .langCode("ua")
             .build();
 
     }
@@ -2317,7 +2307,6 @@ public class ModelUtils {
             .price(100)
             .commission(50)
             .fullPrice(150)
-            .capacity(100)
             .createdAt(LocalDate.now())
             .createdBy(getEmployee())
             .minAmountOfBags(MinAmountOfBag.INCLUDE)
@@ -2325,7 +2314,18 @@ public class ModelUtils {
             .descriptionEng("DescriptionEng")
             .name("name")
             .nameEng("nameEng")
-            .location(getLocation())
+            .limitIncluded(false)
+            .build();
+    }
+
+    public static BagTranslationDto getBagTranslationDto() {
+        return BagTranslationDto.builder()
+            .id(1)
+            .capacity(20)
+            .price(150)
+            .name("name")
+            .nameEng("nameEng")
+            .limitedIncluded(false)
             .build();
     }
 
@@ -2335,15 +2335,14 @@ public class ModelUtils {
             .price(100)
             .commission(50)
             .fullPrice(150)
-            .capacity(100)
             .createdAt(LocalDate.now())
             .createdBy(getEmployee())
             .minAmountOfBags(MinAmountOfBag.INCLUDE)
+            .limitIncluded(false)
             .description("Description")
             .descriptionEng("DescriptionEng")
             .name("name")
             .nameEng("nameEng")
-            .location(getLocation())
             .build();
     }
 
@@ -2366,19 +2365,18 @@ public class ModelUtils {
             .signature("Test Signature").build();
     }
 
-    public static CreateServiceDto getCreateServiceDto() {
-        return CreateServiceDto.builder()
+    public static ServiceDto getServiceDto() {
+        return ServiceDto.builder()
             .name("Name")
             .nameEng("NameEng")
             .price(100)
             .description("Description")
             .descriptionEng("DescriptionEng")
-            .tariffId(1L)
             .build();
     }
 
-    public static ServiceDto getServiceDto() {
-        return ServiceDto.builder()
+    public static GetServiceDto getGetServiceDto() {
+        return GetServiceDto.builder()
             .id(1L)
             .name("Name")
             .nameEng("NameEng")
@@ -2479,6 +2477,19 @@ public class ModelUtils {
 
     }
 
+    public static List<Bag> getBag1list() {
+        return List.of(Bag.builder()
+            .id(1)
+            .price(100)
+            .capacity(20)
+            .commission(50)
+            .fullPrice(1500)
+            .name("name")
+            .nameEng("nameEng")
+            .limitIncluded(false)
+            .build());
+    }
+
     public static List<Bag> getBaglist() {
         return List.of(Bag.builder()
             .id(1)
@@ -2530,7 +2541,6 @@ public class ModelUtils {
             .capacity(10)
             .commission(21)
             .fullPrice(20)
-            .location(Location.builder().id(1L).build())
             .name("name")
             .nameEng("nameEng")
             .limitIncluded(false)
@@ -2541,7 +2551,6 @@ public class ModelUtils {
                 .capacity(10)
                 .commission(21)
                 .fullPrice(21)
-                .location(Location.builder().id(1L).build())
                 .name("name")
                 .nameEng("nameEng")
                 .limitIncluded(false)
@@ -2759,29 +2768,13 @@ public class ModelUtils {
         return Bag.builder()
             .id(1)
             .minAmountOfBags(MinAmountOfBag.INCLUDE)
-            .location(Location
-                .builder()
-                .id(1L)
-                .locationStatus(LocationStatus.ACTIVE)
-                .build())
+            .limitIncluded(false)
             .description("Description")
             .descriptionEng("DescriptionEng")
             .name("Test")
             .nameEng("a")
             .createdBy(getEmployee())
             .editedBy(getEmployee())
-            .build();
-    }
-
-    public static Bag bagDto2() {
-        return Bag.builder()
-            .id(1)
-            .minAmountOfBags(MinAmountOfBag.EXCLUDE)
-            .location(Location
-                .builder()
-                .id(1L)
-                .locationStatus(LocationStatus.ACTIVE)
-                .build())
             .build();
     }
 
@@ -2829,10 +2822,6 @@ public class ModelUtils {
             .price(1)
             .fullPrice(1)
             .commission(2)
-            .location(Location
-                .builder()
-                .id(1L)
-                .build())
             .build();
     }
 
@@ -4099,23 +4088,13 @@ public class ModelUtils {
 
     public static UserPointsAndAllBagsDto getUserPointsAndAllBagsDto() {
         return new UserPointsAndAllBagsDto(
-            Arrays.asList(
+            List.of(
                 BagTranslationDto.builder()
                     .id(1)
                     .name("name")
-                    .capacity(10)
-                    .price(20)
+                    .capacity(20)
+                    .price(150)
                     .nameEng("nameEng")
-                    .locationId(1L)
-                    .limitedIncluded(false)
-                    .build(),
-                BagTranslationDto.builder()
-                    .id(2)
-                    .name("name")
-                    .capacity(10)
-                    .price(21)
-                    .nameEng("nameEng")
-                    .locationId(1L)
                     .limitedIncluded(false)
                     .build()),
             600);
@@ -4125,13 +4104,6 @@ public class ModelUtils {
         return TariffsInfoDto.builder()
             .limitDescription("Description")
             .id(1L)
-            .build();
-    }
-
-    public static OrderStatusPageDto getOrderStatusData() {
-        return OrderStatusPageDto.builder()
-            .amountOfBagsOrdered(Collections.singletonMap(1, 2))
-            .amountOfBagsExported(Map.ofEntries(Map.entry(1, 1)))
             .build();
     }
 
